# archive-forensic

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: archive.rs  archive_layer.rs  detect.rs  detour.rs  error.rs  execute.rs  lib.rs  peel.rs  plan.rs  reassemble.rs  resolve.rs  vfs.rs
core/tests/: archive_7z.rs  archive_layer.rs  archive_tar.rs  archive_zip.rs  detour.rs  resolve.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-core-forensic-split.md  0002-content-magic-authoritative-detection.md  0003-forbid-unsafe-panic-free-pure-rust.md  0004-reuse-fleet-readers-batteries-included.md  0005-msrv-1-93-from-sevenz.md  0006-recursive-resolve-cumulative-bomb-guards.md  0007-optional-forensic-vfs-adapter.md  0008-two-phase-seekable-access.md
docs/plans/: tar-xz-support.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive.rs  fuzz_peel.rs  fuzz_resolve.rs
supply-chain/: config.toml
tests/data/: README.md
tests/data/fixtures/: oneimg.tgz  payload.7z  payload.bz2  payload.tar  payload.tbz2  payload.tgz
