[workspace]
members = ["core", "forensic"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/archive-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]

[workspace.dependencies]
archive-core = { path = "core", version = "0.1.2" }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
