[workspace]
members = ["core", "forensic"]
resolver = "2"

[workspace.package]
edition = "2021"
# The batteries-included reader depends on sevenz-rust2 (pure-Rust 7z), which
# requires rustc 1.93 — that dependency sets the real MSRV floor. Capability
# (7z decode) wins over a lower declared MSRV per fleet policy.
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/archive-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]

[workspace.dependencies]
archive-core = { path = "core", version = "0.1.4" }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"
suspicious = "deny"
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
