[package]
name = "archive-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust archive-detour reader for forensics: transparently peels gzip/bzip2/xz/zip/7z/tar packing layers to reveal the inner evidence, with extension-and-magic format detection."
readme = "../README.md"
keywords = ["archive", "gzip", "forensics", "dfir", "decompress"]
categories = ["compression", "filesystem", "parser-implementations"]

[lib]
name = "archive_core"

[dependencies]
thiserror.workspace = true
# Pure-Rust compression decoders (no C) for the tar.gz / tar.bz2 outer layer.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bzip2-rs = "0.1"
# tar member walking. default-features = false drops the `xattr` extraction
# path (we only read members into memory, never restore to disk); the remaining
# tree is pure-Rust + libc bindings (no bundled C compiled/linked).
tar = { version = "0.4", default-features = false }

[lints]
workspace = true
