[package]
name = "archive-core"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust archive-layer reader for forensics: transparently peels gzip/bzip2/xz/zip/7z/tar archive layers to reveal the inner evidence, with extension-and-magic format detection."
readme = "../README.md"
keywords = ["archive", "gzip", "forensics", "dfir", "decompress"]
categories = ["compression", "filesystem", "parser-implementations"]

[lib]
name = "archive_core"

[features]
# Implement the forensic-vfs `ArchiveOpen` contract so the archive layer plugs
# into the universal VFS resolver (see `src/vfs.rs`). Optional so a bare reader
# stays dependency-light.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror.workspace = true
# The forensic-vfs KNOWLEDGE leaf — the ArchiveOpen/ImageSource contract. Optional,
# gated behind the `vfs` feature.
forensic-vfs = { version = "0.7", optional = true }
# Pure-Rust compression decoders (no C) for the tar.gz / tar.bz2 outer layer.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bzip2-rs = "0.1"
# tar member walking. default-features = false drops the `xattr` extraction
# path (we only read members into memory, never restore to disk); the remaining
# tree is pure-Rust + libc bindings (no bundled C compiled/linked).
tar = { version = "0.4", default-features = false }
# ZIP (.zip / .clbx) reader — the fleet's own pure-Rust, no-C-FFI reader
# (imports as `zip_core`). Prefer ours over any third-party zip crate.
zip-forensic-core = "0.2"
# 7z reader. Default features (aes256/bzip2/ppmd + built-in LZMA/LZMA2/copy/delta)
# are all pure-Rust: bzip2 resolves to libbz2-rs-sys (a Rust port, no bundled C),
# and the C-linking `zstd` codec is a non-default feature we do NOT enable.
sevenz-rust2 = "0.21"
# Temp-file spill for the streaming peel executor (SpillToTemp/Zran access):
# pure-Rust + libc, RAII-deleted on drop. No bundled C.
tempfile = "3"

[lints]
workspace = true
